--- a/style.css
+++ b/style.css
@@ -8,22 +8,61 @@
 body{
 	text-align: center;
 	padding-bottom: 100px;
-/*	background-image: url(./images/background-image.jpg); */
+	background-image: url(./images/background-image.jpg);
+	font-weight: 400;
 } 
-/*
-#title{
+
+#title {
+	padding-top: 50px;
 	color: white;
-	text-align: center;
+	text-shadow: 1px 1px #000;
+	font-size: 4em;
 }
 
-#description{
-	color: white;
-	text-align: center;
+#description {
+	color:white;
+	font-size: 1.5em;
+	text-shadow: 1px 1px #000;
+	
 }
 
-form{
+#survey-form{
 	color: white;
-	text-align: center;
+	background-color: rgb(0,0,0,0.8);
+	width: 450px;
+	margin: 0 auto;
+	padding-bottom: 20px;
+	font-size: 1.2rem;
+	border-radius: 0.5em;
 }
 
-*/
+.form-group{
+	padding: 10px;
+	
+}
+ #name-label, #email-label, #number-label{
+	 padding-top: 30px;
+	 padding-bottom: 20px;
+	 margin-top: 20px;
+ }
+
+ #name-label{
+	position: relative;
+	top: 3px;
+	
+ }
+
+#submit{
+	width: 75%;
+	height: 50px;
+	cursor: pointer;
+	border-radius: 50px;
+	background-color: red;
+	color: white;
+	border: none;
+}
+
+#submit:hover{
+	background-color: white;
+	color: red;
+}
