--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 #survey-form{
 	color: white;
 	background-color: rgb(0,0,0,0.8);
-	width: 450px;
+	width: 550px;
 	margin: 0 auto;
 	padding-bottom: 20px;
 	font-size: 1.2rem;
@@ -49,7 +49,6 @@ body{
  #name-label{
 	position: relative;
 	top: 3px;
-	
  }
 
 #submit{
@@ -65,4 +64,29 @@ body{
 #submit:hover{
 	background-color: white;
 	color: red;
+}
+
+input[type=text] {
+  width: 70%;
+  height: 40px;
+}
+
+input[type=email] {
+  width: 70%;
+  height: 40px;
+}
+
+input[type=number] {
+  width: 70%;
+  height: 40px;
+}
+
+select{
+	width: 70%;
+  	height: 40px;
+}
+
+textarea{
+	width: 70%;
+  	height: 60px;
 }
